<resources>
    <string name="app_name">TrainingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reps">Reps</string>
    <string name="set">Set:</string>
    <string name="kilos">Kilos</string>
    <string name="slash">|</string>
    <string name="delete_set">Delete set</string>
    <string name="exercise">Exercise</string>
</resources>