<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="50dp"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/button_shape"
    android:animateLayoutChanges="true"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical"
    android:id="@+id/reps_layout">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/delete_set"
        android:focusable="true"
        android:src="@drawable/ic_baseline_clear_24"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:fabSize="mini"/>

    <TextView
        android:id="@+id/reps_of_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/reps_count"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/reps"
        android:autofillHints="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/weights"
        android:layout_width="100dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/kilos"
        android:textSize="20sp"
        android:autofillHints="no" />
</LinearLayout>